# academy

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  lint-imports.sh  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/: release.yml
.github/workflows/: check-docs.yml  docs.yml  publish.yml  tests.yml
0.2.0/: 404.html  index.html
0.2.0/api/: index.html
0.2.0/case-studies/: index.html
0.2.0/concepts/: index.html
0.2.0/contributing/: index.html
0.2.0/faq/: index.html
0.2.0/get-started/: index.html
0.2.0/guides/: index.html
0.2.0/publications/: index.html
0.3.0/: 404.html  index.html  objects.inv
0.3.1/: 404.html  index.html  objects.inv
0.4.0/: 404.html  index.html
0.5.0/: 404.html  index.html
academy/: agent.py  behavior.py  context.py  event.py  event_loop.py  exception.py  executor.py  handle.py  home.py  identifier.py  launcher.py  logging.py  manager.py  message.py  mypy_plugin.py  remote.py  request_state.py  run.py  runner.py  runtime.py  serialize.py  socket.py  stats.py  task.py  thread.py
docs/: concepts.md  contributing.md  faq.md  get-started.md  migration.md
examples/: README.md
examples/07-mol-design/: README.md  environment.yml  mol_design_agents.py  pyproject.toml  run-07.py
main/: 404.html  index.html  objects.inv  sitemap.xml
testing/: behavior.py  constant.py  fixture.py  redis.py  utils.py
tests/: agent_test.py  behavior_test.py  conftest.py  event_loop_test.py  handle_test.py  launcher_test.py  manager_test.py  message_test.py  runtime_test.py  socket_test.py  thread_test.py
(+430 files in other folders)
